--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+axum = "0.8.1"
+fhir-model = "^0.12.0"
+fhir-sdk = "^0.14.1"
+mongodb = "3.2.0"
+serde = { version = "=1.0.184", features = ["derive"] }
+tokio = "1.43.0"
+uuid = "1.12.1"
