--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 axum = "0.8.1"
 fhir-model = "^0.12.0"
 fhir-sdk = "^0.14.1"
-mongodb = "3.2.0"
-serde = "=1.0.184"
 tokio = "1.43.0"
-uuid = "1.12.1"
+uuid = { version = "1.12.1", features = ["v4", "serde"] }
+mongodb = "3.1.1"
+serde = { version = "1.0.184", features = ["derive"] }
+serde_json = "1.0"
+bson = { version = "2.10", features = ["serde_with"] } 
