--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ mongodb = "3.1.1"
 serde = { version = "1.0.184", features = ["derive"] }
 serde_json = "1.0"
 bson = { version = "2.10", features = ["serde_with"] } 
+reqwest = "0.12.12"
