--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ serde = { version = "1.0.184", features = ["derive"] }
 serde_json = "1.0"
 bson = { version = "2.10", features = ["serde_with"] } 
 reqwest = "0.12.12"
+tower-http = { version = "0.6.2", features = ["trace"] }
+dotenvy = "0.15.7"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
